--- a/_posts/2025-01-21-回溯-系列题单.md
+++ b/_posts/2025-01-21-回溯-系列题单.md
@@ -333,7 +333,7 @@ class Solution:
 
 递归用来纵向遍历，表示以任一字符开头（startIndex）来切割字符串；for循环用来从startIndex开始横向往字符串结尾遍历，针对`s[startIndex:i+1]`子串，如果是回文字符串，则加入path。
 当startIndex遍历到字符串结尾，则将path将入到ans中。
-<img src="{{ site.baseurl }}/assets/images/131.分割回文串.jpg" alt="字符串切割" style="width:800px; height:auto;" />
+<img src="{{ site.baseurl }}/assets/images/Palindrome_Partitioning.jpg" alt="字符串切割" style="width:800px; height:auto;" />
 
 ---
 
@@ -413,7 +413,7 @@ class Solution:
         return ans
 ```
 **总结：**
-<img src="{{ site.baseurl }}/assets/images/78.子集.png" alt="字符串切割" style="width:800px; height:auto;" />
+<img src="{{ site.baseurl }}/assets/images/subset.png" alt="字符串切割" style="width:800px; height:auto;" />
 > **如果把 子集问题、组合问题、分割问题都抽象为一棵树的话，那么组合问题和分割问题都是收集树的叶子节点，而子集问题是找树的所有节点！**
 
 ---
