For the Links check

--- a/_posts/2025-06-25-背包问题.md
+++ b/_posts/2025-06-25-背包问题.md
@@ -324,7 +324,7 @@ print(knapsack_unbounded(n - 1, W))  # 输出 15
 
 **0-1背包**
 - [416. 分割等和子集](https://leetcode.cn/problems/partition-equal-subset-sum/description/)
-- [494. 目标和](http://leetcode.cn/problems/target-sum/description/)
+- [494. 目标和](https://leetcode.cn/problems/target-sum/description/)
 
 **完全背包**
 - [322. 零钱兑换](https://leetcode.cn/problems/coin-change/)
