--- a/_posts/2024-05-21-贪心.md
+++ b/_posts/2024-05-21-贪心.md
@@ -63,7 +63,7 @@ while 能朝给定总目标前进一步 do
 
 ### 背包问题
 
-在[动态规划](动态规划.md#背包问题)章节，我们已经了解到3中基本的背包问题：0-1背包，完全背包和部分背包。很容易证明，背包问题不能使用贪心算法。然而，我们考虑这样一种背包问题：在选择物品$i$装入背包时，可以选择物品的一部分，而不一定要全部装入背包。这样便可以使用贪心算法求解了。
+在[背包问题](../背包问题)章节，我们已经了解了基本的背包问题：0-1背包，完全背包和部分背包。很容易证明，背包问题不能使用贪心算法。然而，我们考虑这样一种背包问题：在选择物品$i$装入背包时，可以选择物品的一部分，而不一定要全部装入背包。这样便可以使用贪心算法求解了。
 
 **贪心策略**：计算每种物品的单位价值作为贪心选择的依据指标，选择单位重量价值最高的物品，将尽可能多的该物品装入背包，依次策略进行下去，直到背包装满为止。（在0-1背包问题中贪心选择之所以不能得到最优解原因是贪心选择无法保证最终能将背包装满，部分闲置的背包空间使每公斤背包空间的价值降低了。）
 
