data structure and dp

--- a/_posts/2024-02-21-双指针_滑动窗口.md
+++ b/_posts/2024-02-21-双指针_滑动窗口.md
@@ -31,7 +31,7 @@ layout: post
 | 可变窗口大小 | 「最短子数组长度 ≥ target」 | 右指针滑动扩张，左指针缩小 |
 
 **经典例题：**
-- [3439. 重新安排会议得到最多空余时间 I](https://leetcode.cn/problems/reschedule-meetings-for-maximum-free-time-i/description/)
+- [3439. 重新安排会议得到最多空余时间 I](https://leetcode.cn/problems/reschedule-meetings-for-maximum-free-time-i/)
 
 ---
 
@@ -56,5 +56,9 @@ layout: post
 | 链表操作           | 判断环、倒数第 K 个节点、快慢合并 | 快慢指针      |
 | 移除元素           | 原地覆盖、排序数组去重        | 双指针拷贝     |
 | 模拟归并排序         | 合并两个有序数组           | 双数组双指针    |
+
+**经典例题：**
+- [11. 盛最多水的容器](https://leetcode.cn/problems/container-with-most-water/)
+- [15. 三数之和](https://leetcode.cn/problems/3sum/)
 
 ---
