--- a/_posts/2025-01-21-回溯-系列题单.md
+++ b/_posts/2025-01-21-回溯-系列题单.md
@@ -19,7 +19,7 @@ layout: post
 ## 组合问题
 
 ### 组合
-[77. 组合](https://leetcode.cn/problems/combinations/description/)
+[77. 组合](https://leetcode.cn/problems/combinations/)
 
 ```markdown
 给定两个整数 n 和 k，返回 1 ... n 中所有可能的 k 个数的组合。你可以按 任何顺序 返回答案。
@@ -50,7 +50,7 @@ class Solution:
 ---
 
 ### 组合总和 III
-[216. 组合总和 III](https://leetcode.cn/problems/combination-sum-iii/description/)
+[216. 组合总和 III](https://leetcode.cn/problems/combination-sum-iii/)
 
 ```markdown
 找出所有相加之和为 n 的 k 个数的组合。组合中只允许含有 1 - 9 的正整数，并且每种组合中不存在重复的数字。
@@ -88,7 +88,7 @@ class Solution:
 ---
 
 ### 电话号码的字母组合
-[17.电话号码的字母组合](https://leetcode.cn/problems/letter-combinations-of-a-phone-number/description/)
+[17.电话号码的字母组合](https://leetcode.cn/problems/letter-combinations-of-a-phone-number/)
 ```markdown
 给定一个仅包含数字 2-9 的字符串，返回所有它能表示的字母组合。
 给出数字到字母的映射如下（与电话按键相同）。注意 1 不对应任何字母。
@@ -140,7 +140,7 @@ class Solution:
 ---
 
 ### 组合总和
-[39. 组合总和](https://leetcode.cn/problems/combination-sum/description/)
+[39. 组合总和](https://leetcode.cn/problems/combination-sum/)
 ```markdown
 给定一个无重复元素的数组 candidates 和一个目标数 target ，找出 candidates 中所有可以使数字和为 target 的组合。
 candidates 中的数字可以无限制重复被选取。
@@ -186,7 +186,7 @@ class Solution:
 ---
 
 ### 组合总和 II
-【典中典】[216. 组合总和 II](https://leetcode.cn/problems/combination-sum-ii/description/)
+【典中典】[216. 组合总和 II](https://leetcode.cn/problems/combination-sum-ii/)
 
 ```markdown
 给定一个数组 candidates 和一个目标数 target ，找出 candidates 中所有可以使数字和为 target 的组合。
@@ -297,7 +297,7 @@ class Solution:
 ## 切割问题
 
 ### 分割回文串
-[131. 分割回文串](https://leetcode.cn/problems/palindrome-partitioning/description/)
+[131. 分割回文串](https://leetcode.cn/problems/palindrome-partitioning/)
 
 ```markdown
 给定一个字符串 s，将 s 分割成一些子串，使每个子串都是回文串。
@@ -338,7 +338,7 @@ class Solution:
 ---
 
 ### 复原IP地址
-[93. 复原IP地址](https://leetcode.cn/problems/restore-ip-addresses/description/)
+[93. 复原IP地址](https://leetcode.cn/problems/restore-ip-addresses/)
 
 ```markdown
 给定一个只包含数字的字符串，复原它并返回所有可能的 IP 地址格式。
@@ -389,7 +389,7 @@ class Solution:
 ## 子集问题
 
 ### 子集
-[78. 子集](https://leetcode.cn/problems/subsets/description/)
+[78. 子集](https://leetcode.cn/problems/subsets/)
 ```markdown
 给定一组不含重复元素的整数数组 nums，返回该数组所有可能的子集（幂集）。
 
@@ -419,7 +419,7 @@ class Solution:
 ---
 
 ### 子集 II
-[90. 子集 II](https://leetcode.cn/problems/subsets-ii/description/)
+[90. 子集 II](https://leetcode.cn/problems/subsets-ii/)
 ```markdown
 给定一个可能包含重复元素的整数数组 nums，返回该数组所有可能的子集（幂集）。
 说明：解集不能包含重复的子集。
@@ -455,7 +455,7 @@ class Solution:
 ---
 
 ### 递增子序列
-【典中典】[491.递增子序列](https://leetcode.cn/problems/non-decreasing-subsequences/description/)
+【典中典】[491.递增子序列](https://leetcode.cn/problems/non-decreasing-subsequences/)
 ```markdown
 给定一个整型数组, 你的任务是找到所有该数组的递增子序列，递增子序列的长度至少是2。
 
@@ -495,7 +495,7 @@ class Solution:
 ## 排列问题
 
 ### 全排列
-[46. 全排列](https://leetcode.cn/problems/permutations/description/)
+[46. 全排列](https://leetcode.cn/problems/permutations/)
 ```markdown
 给定一个 没有重复 数字的序列，返回其所有可能的全排列。
 
@@ -533,7 +533,7 @@ class Solution:
 ---
 
 ### 全排列 II
-【典中典】[47. 全排列 II](https://leetcode.cn/problems/permutations-ii/description/)
+【典中典】[47. 全排列 II](https://leetcode.cn/problems/permutations-ii/)
 ```markdown
 给定一个可包含重复数字的序列 nums ，按任意顺序 返回所有不重复的全排列。
 
@@ -618,7 +618,7 @@ class Solution:
 ## “二维”回溯
 
 ### N皇后
-[51. N皇后](https://leetcode.cn/problems/n-queens/description/)
+[51. N皇后](https://leetcode.cn/problems/n-queens/)
 ```markdown
 n 皇后问题 研究的是如何将 n 个皇后放置在 n×n 的棋盘上，并且使皇后彼此之间不能相互攻击。
 给你一个整数 n ，返回所有不同的 n 皇后问题 的解决方案。
@@ -677,7 +677,7 @@ class Solution:
 ---
 
 ### 解数独
-[37. 解数独](https://leetcode.cn/problems/sudoku-solver/description/)
+[37. 解数独](https://leetcode.cn/problems/sudoku-solver/)
 ```markdown
 编写一个程序，通过填充空格来解决数独问题。
 
@@ -724,7 +724,7 @@ class Solution:
 ---
 
 ## 其他回溯问题
-[332. 重新安排行程](https://leetcode.cn/problems/reconstruct-itinerary/description/)
+[332. 重新安排行程](https://leetcode.cn/problems/reconstruct-itinerary/)
 ```markdown
 给你一份航线列表 tickets ，其中 `tickets[i] = [from_i, to_i]` 表示飞机出发和降落的机场地点。请你对该行程进行重新规划排序。
 
