--- a/_posts/2025-03-21-动态规划入门.md
+++ b/_posts/2025-03-21-动态规划入门.md
@@ -1,5 +1,5 @@
 ---
-title: "动态规划"
+title: "动态规划系列：理解DP的基本原理"
 categories: [ds-algo]
 
 math: true
@@ -355,5 +355,10 @@ int getMostGold(int n, int w, int[] g, int[] p){
 * [动态规划案例参考](https://blog.csdn.net/u013309870/article/details/75193592)
 * [动态规划：从入门到放弃](https://blog.csdn.net/iva_brother/article/details/84037050)
 * [看动画轻松理解「递归」与「动态规划」](https://segmentfault.com/a/1190000017533031)
+
+---
+
+## 经典例题
+- [72. 编辑距离](https://leetcode.cn/problems/edit-distance/)
 
 ---
