--- a/_posts/2025-03-22-背包问题.md
+++ b/_posts/2025-03-22-背包问题.md
@@ -1,5 +1,5 @@
 ---
-title: "0-1背包与完全背包"
+title: "动态规划系列：背包问题专题"
 categories: [ds-algo]
 
 math: true
@@ -320,15 +320,15 @@ print(knapsack_unbounded(n - 1, W))  # 输出 15
 
 ---
 
-## 模板题
+## 经典例题
 
 **0-1背包**
-- [416. 分割等和子集](https://leetcode.cn/problems/partition-equal-subset-sum/description/)
-- [494. 目标和](https://leetcode.cn/problems/target-sum/description/)
+- [416. 分割等和子集](https://leetcode.cn/problems/partition-equal-subset-sum/)
+- [494. 目标和](https://leetcode.cn/problems/target-sum/)
 
 **完全背包**
 - [322. 零钱兑换](https://leetcode.cn/problems/coin-change/)
-- [518. 零钱兑换 II](https://leetcode.cn/problems/coin-change-ii/description/)
-- [3592. 硬币面值还原](https://leetcode.cn/problems/inverse-coin-change/description/)
+- [518. 零钱兑换 II](https://leetcode.cn/problems/coin-change-ii/)
+- [3592. 硬币面值还原](https://leetcode.cn/problems/inverse-coin-change/)
 
 ---
