--- a/_posts/2024-06-22-前缀和_差分_树状_线段树.md
+++ b/_posts/2024-06-22-前缀和_差分_树状_线段树.md
@@ -11,9 +11,9 @@ layout: post
 🔗 **目录导航：**
 - [前缀和数组](/posts/前缀和_差分_树状_线段树/#前缀和数组)
 - [差分数组](/posts/前缀和_差分_树状_线段树/#差分数组)
-- [队列/栈](/posts/栈_队列_堆/#队列和栈)
-- [单调栈](/posts/栈_队列_堆/#单调栈)
-- [堆(优先级队列)](/posts/栈_队列_堆/#堆优先级队列)
+- [队列/栈](/posts/栈_队列_单调栈_堆/#队列和栈)
+- [单调栈](/posts/栈_队列_单调栈_堆/#单调栈)
+- [堆(优先级队列)](/posts/栈_队列_单调栈_堆/#堆优先级队列)
 - [树状数组](/posts/前缀和_差分_树状_线段树/#树状数组)
 - [线段树](/posts/前缀和_差分_树状_线段树/#线段树)
 - [并查集](/posts/字典树_LRU_并查集/#并查集)
