--- a/_posts/2024-03-21-位操作.md
+++ b/_posts/2024-03-21-位操作.md
@@ -7,21 +7,56 @@ layout: post
 
 对整数的二进制位进行操作，如与（AND）、或（OR）、异或（XOR）、左移、右移等操作。
 
-## 原码、反码和补码
+## 原码、反码、补码
 
-在Java中，所有数据的表示方法都是以补码的形式表示。
+| 名称                 | 含义                    | 说明         |
+| ------------------ | --------------------- | ---------- |
+| 原码 | 最高位为符号位，其余位为绝对值       | 人类直观表示方式   |
+| 反码 | 正数同原码，负数符号位不变，其他位按位取反 | 早期计算机中间表示  |
+| 补码 | 正数同原码，负数 = 对正数按位取反 +1 | 现代计算机标准表示法 |
 
-正数的原码、反码和补码一致
+> 所有现代计算机用的都是 **补码（Two's Complement）**，它的好处是：
+> 
+> * 正数和负数可以统一用一个加法电路处理
+> * 没有两个“0”的表示（反码有+0和-0）
+> * 减法可视为加上一个负数
 
-负数的原码位对应正数的原码，最高位位符号位，为1。
+---
 
-反码为原码符号位不变，按位取反。补码为反码末位加1。
+## 举例（以8位整数为例）
 
-## 常见整数的计算机表示形式
+**正数：`5` 的原码、反码、补码：**
 
-在计算机中，采用二进制补码的储存数据。[参考链接](https://blog.csdn.net/y12345678904/article/details/52854230)。
+| 编码类型 | 值    | 二进制解释      |
+| ---- | ---- | ---------- |
+| 原码   | `+5` | `00000101` |
+| 反码   | `+5` | `00000101` |
+| 补码   | `+5` | `00000101` |
 
-Java的int是32位。范围是-2^31^ ~ 2^31^-1。下面以8位为例，给出特殊整数的原码、反码和补码。
+> 正数在三种编码中是一样的
+
+**负数：`-5` 的原码、反码、补码：**
+
+| 编码类型 | 值    | 二进制解释                   |
+| ---- | ---- | ----------------------- |
+| 原码   | `-5` | `10000101`（符号1 + 绝对值）   |
+| 反码   | `-5` | `11111010`（符号位不变，其它位取反） |
+| 补码   | `-5` | `11111011`（反码 + 1）      |
+
+> 现代计算机只使用补码存储整数！
+
+---
+
+**补码运算规则总结（重点）：**
+
+1. 正数的补码 = 原码 = 反码
+2. 负数的补码 = 原码符号位不变 + 其它位按位取反 + 最后 +1
+3. `-x = ~x + 1` 反向生成负数（按位取反，末位加一）
+4. 减法可转为加法：`a - b = a + (~b + 1)`
+
+---
+
+**特殊整数的原码、反码和补码：**
 
 | 整数 | 原码      | 反码      | 补码      |
 | ---- | --------- | --------- | --------- |
@@ -31,13 +66,11 @@ Java的int是32位。范围是-2^31^ ~ 2^31^-1。下面以8位为例，给出特
 | 0    | 0000-0000 |           |           |
 | -128 |           |           | 1000-0000 |
 
-在二进制中，0有正0与负0两种表示方法。**但是，0只需要一个。**因此，-0被人为拿来表示一个最小的数。
-
--128的补码为1000-0000。这个补码不是真正的补码（人为规定），且没有原码与反码。
+> 在二进制中，0有正0与负0两种表示方法。**但是，0只需要一个。**因此，-0被人为拿来表示一个最小的数。
+> 
+> -128的补码为1000-0000。这个补码不是真正的补码（人为规定），且没有原码与反码。
 
 ## 基本位操作符
-
-[参考链接](https://www.jianshu.com/p/b677858bc085)
 
 | 符号   | 描述               | 位运算规则                                 |
 |------| :----------------- | :----------------------------------------- |
@@ -45,81 +78,212 @@ Java的int是32位。范围是-2^31^ ~ 2^31^-1。下面以8位为例，给出特
 | \|   | 或                 | 两个位都为0时，结果才为0                   |
 | ^    | 异或               | 两个位**相异时为1，相同时为0**             |
 | ~    | 取反（单目运算符） | 0 变 1，1 变 0                             |
-| <<   | 左移               | 各二进位全部左移若干位，高位丢弃，低位补 0 |
+| \<<  | 左移               | 各二进位全部左移若干位，高位丢弃，低位补 0 |
 | \>>  | 右移               | 各二进位全部右移若干位，**高位补符号位**   |
 | \>>> | 无符号右移         | 各二进位全部右移若干位，**高位补0**        |
 
 **注意：**
+1. 位操作只能用于**整形（字符）**数据
+2. 位操作的优先级比较低，因此尽量使用**扩号**来确保运算顺序
+3. 另外位操作还有一些复合操作符，如 &=、\|=、 ^=、\<<=、\>>=
 
-1. 位操作只能用于**整形（字符）**数据。
-
-2. 位操作的优先级比较低，因此尽量使用**扩号**来确保运算顺序。
-
-3. 另外位操作还有一些复合操作符，如 &=、|=、 ^=、<<=、>>=
-
-## 常用位操作小技巧
-
-下面对位操作的一些常见应用作个总结，有判断奇偶、交换两数、变换符号及求绝对值。这些小技巧应用易记，应当熟练掌握。
+## 常用位操作技巧
 
 ### 判断奇偶性
 
-```java
-(i & 1) == 0 // 偶数
+```python
+def is_odd(n):
+    return (n & 1) == 1
+
+print(is_odd(5))   # True
+print(is_odd(8))   # False
 ```
 
-### 交换两数
+解释：
+* 任何整数的**最低位决定奇偶性**
+* `x & 1` 提取最低位，如果是1，则为奇数
 
-```java
-a ^= b;
-b ^= a;
-a ^= b;
+---
+
+### 交换两个数（不使用临时变量）
+
+```python
+def swap(a, b):
+    a = a ^ b
+    b = a ^ b  # 相当于 b = (a ^ b) ^ b = a
+    a = a ^ b  # 相当于 a = (a ^ b) ^ a = b
+    return a, b
+
+print(swap(5, 10))  # (10, 5)
 ```
 
-### 变换符号（正变负，负变正）
+解释：
+* 利用异或的特性：`x ^ x = 0`, `x ^ 0 = x`
+* 不需要使用额外内存
 
-```java
-// 按位取反，末位加1
-~a + 1;
+---
+
+### 提取最低位的 1（lowbit）
+
+```python
+def lowbit(x):
+    return x & -x
+
+print(bin(12))        # 0b1100
+print(bin(lowbit(12)))  # 0b100
 ```
 
-### 求绝对值
+解释：
+* `-x` 在补码中等于 `~x + 1`，会把最低的1留下，其它清零
+* 常用于树状数组、快速枚举子集
 
-```java
-int sign = a >> 31; // 取得符号位,sign值为0或者-1
-abs = sign == 0 ? a : ~ a + 1; //方法一
-// 方法二：sign为0时，与0异或为a,-0不变；
-// sign为-1时，与-1异或相当于按位取反（包括符号位），末位加1
-abs = (a ^ sign) - sign；
-// 方法二简写为：
-abs = (a ^ (a >> 31)) - (a >> 31)
+---
+
+### 去除最低位的 1
+
+```python
+def remove_lowest_bit(x):
+    return x & (x - 1)
+
+print(bin(12))                # 0b1100
+print(bin(remove_lowest_bit(12)))  # 0b1000
 ```
 
-### 获取int类型最大最小值
+解释：
+* `x - 1` 会把最低的1变成0，右边的0变成1
+* 常用于**计数二进制中1的个数**
 
-```java
-~(1 << 31) // int最大值： 0111-1111
-   1 << 31  // int最小值： 1000-0000
+---
+
+### 统计整数中1的个数（Hamming Weight）
+
+```python
+def count_ones(x):
+    count = 0
+    while x:
+        x &= (x - 1)
+        count += 1
+    return count
+
+print(count_ones(15))  # 4
 ```
 
-### 乘以2、除以2运算
+解释：
+* 每次 `x & (x - 1)` 去掉一个 1
+* 时间复杂度 = 二进制中1的个数（比按位扫描快）
 
-```java
-a << 1 // 乘以2
-a << m // 乘以2的m次方
-a >> 1 // 除以2，（负奇数不可用）
-a >> m // 除以2的m次方，（负奇数不可用）
+---
+
+### 判断某一位是否为1
+
+```python
+def is_bit_set(x, k):
+    return ((x >> k) & 1) == 1
+
+print(is_bit_set(5, 0))  # True  (0001)
+print(is_bit_set(5, 1))  # False
 ```
 
-### 计算n是否为2的幂
+解释：
+* 将第 `k` 位右移到最低位，然后与1做 & 运算
 
-```java
-// 去掉0的情况
-n & (n - 1) == 0
-// 或
-(n & -n) == n
+---
+
+### 设置 / 清除 / 翻转某一位
+
+```python
+# 将第k位（从0开始索引）置为1
+def set_kth_bit(x, k):
+    return x | (1 << k)
+
+# 将第k位（从0开始索引）置为0
+def clear_kth_bit(x, k):
+    return x & ~(1 << k)
+
+# 将第k位（从0开始索引）翻转，即1->0；0->1
+def toggle_kth_bit(x, k):
+    return x ^ (1 << k)
+
+print(bin(set_kth_bit(8, 1)))     # 0b1010
+print(bin(clear_kth_bit(10, 1)))  # 0b1000
+print(bin(toggle_kth_bit(10, 1))) # 0b1000
 ```
 
-## 经典例题
+解释：
+* `1 << k` 构造一个只有第 `k` 位是1 的掩码
+
+---
+
+### 判断是否是 2 的幂
+
+```python
+def is_power_of_two(x):
+    return x > 0 and (x & (x - 1)) == 0
+
+print(is_power_of_two(8))   # True
+print(is_power_of_two(10))  # False
+```
+
+解释：
+* 2 的幂在二进制中只有一个 1
+* `x & (x - 1)` 可以去掉这个 1，所以结果应为 0
+
+---
+
+### Python 模拟无符号右移（逻辑右移）
+
+```python
+def logical_rshift(x, n, bits=32):
+    if x < 0:
+        x += 2 ** bits
+    return (x >> n) & ((1 << (bits - n)) - 1)
+
+print(logical_rshift(-4, 1))  # 2147483646
+```
+
+解释：
+* Python 默认是**算术右移**（保留符号），逻辑右移需要手动补零
+
+---
+
+### 快速乘法（模拟位操作）
+
+```python
+def fast_mul(a, b, mod):
+    res = 0
+    while b:
+        if b & 1:
+            res = (res + a) % mod
+        a = (a + a) % mod
+        b >>= 1
+    return res
+
+print(fast_mul(7, 13, 1000))  # 91
+```
+
+解释：
+* 避免整数乘法溢出，用“加+位移”模拟乘法。
+* 可用于**快速幂、模乘**
+
+---
+
+### 位操作技巧一览（Python）
+
+| 技巧                           | 作用               | 示例代码                   |
+| ---------------------------- | ---------------- | ---------------------- |
+| `x & 1`                      | 判断奇偶性            | `is_odd(x)`            |
+| `x ^ y`                      | 无临时变量交换          | `swap(x, y)`           |
+| `x & -x`                     | 提取最低位的 `1`       | `lowbit(x)`            |
+| `x & (x - 1)`                | 去掉最低位的 `1`       | `remove_lowest_bit(x)` |
+| `while x: x &= (x - 1)`      | 统计二进制中 `1` 的个数   | `count_ones(x)`        |
+| `(x >> k) & 1`               | 判断第 `k` 位是否为 `1` | `is_bit_set(x, k)`     |
+| `x \| (1 << k)`              | 设置第 `k` 位为 `1`   | `set_kth_bit(x, k)`    |
+| `x & ~(1 << k)`              | 清除第 `k` 位        | `clear_kth_bit(x, k)`  |
+| `x ^ (1 << k)`               | 翻转第 `k` 位        | `toggle_kth_bit(x, k)` |
+| `x > 0 and x & (x - 1) == 0` | 判断是否是 `2` 的幂     | `is_power_of_two(x)`   |
+
+
+## 高阶技巧
 
 ### 利用位操作实现加法
 
@@ -146,80 +310,54 @@ public int getSum(int num1,int num2) {
 }
 ```
 
-### 2、3、4的幂
+```python
+def getSum(a: int, b: int) -> int:
+    MAX = 0x7FFFFFFF  # 最大32位整数（正数）
+    MASK = 0xFFFFFFFF  # 32位掩码，模拟无符号整数
 
-给定一个整数，写一个函数来判断它是否是2、 3或4 的幂次方。（3道题）
+    while b != 0:
+        temp = (a ^ b) & MASK
+        b = ((a & b) << 1) & MASK
+        a = temp
 
-**2的幂次方**
-
-```java
-public boolean isPowerOfTwo(int n) {
-	return n > 0 && (n & n - 1) == 0;
-}
+    # 如果 a 超过了最大正整数范围，表示它是负数补码
+    return a if a <= MAX else ~(a ^ MASK)
 ```
 
-**3的幂次方**
+> 在 Python 中： int 是 不限制位数的“无限精度整数” ，你可以表示任意大的正数或负数。
+> 
+> 所以，必须用 MASK 和 MAX 来模拟补码行为。
 
-[常规解法](https://leetcode-cn.com/problems/power-of-three/solution/3de-mi-by-leetcode/)：找出数字 n 是否是数字 b 的幂的一个简单方法是，n%3 只要余数为 0，就一直将 n 除以 b。
-$$
-\begin{aligned} n &= b^x \\ n &= b \times b \times \ldots \times b \end{aligned}
-$$
-因此，应该可以将 $n/b$ 除上x 次，每次都有 0 的余数，最终结果是 1。
+---
 
-```java
-public boolean isPowerOfThree(int n) {
-	if(n <= 0) return false;
-    while(n % 3 == 0){ // 重点
-        n /= 3;
-    }
-    return n == 1;
-}
+### 子集枚举
+
+```python
+def subset_enum(arr):
+    n = len(arr)
+    for mask in range(1 << n):
+        subset = []
+        for i in range(n):
+            if (mask >> i) & 1:
+                subset.append(arr[i])
+        print(subset)
+
+subset_enum([1, 2, 3])
 ```
 
-整数限制：
+解释：
+* 用一个整数的二进制位表示集合的每个元素是否被选中
 
-```java
-public boolean isPowerOfThree(int n) {
-    return n > 0 && (1162261467 % n == 0);
-}
+---
+
+### 状态压缩 DP 示例
+
+```python
+n = 3
+dp = [[float('inf')] * n for _ in range(1 << n)]
+dp[1][0] = 0  # 从城市0出发，状态为 001
+
+# 示例只是状态压缩DP框架，如TSP问题中会使用
 ```
 
-In particular, n is of type int. In Java, this means it is a 4 byte, signed integer. The maximum value of this data type is 2147483467. Three ways of calculating this value are:
-
-- [Google](https://stackoverflow.com/questions/15004944/max-value-of-integer)
-
-- > System.out.println(Integer.MAX_VALUE);
-
-- $MaxInt = 2^{32}/2 - 1$. Since we use 32 bits to represent the number, half of the range is used for negative numbers and 0 is part of the positive numbers.
-
-Knowing the limitation of n, we can now deduce that the maximun value of n that is also a power of three is 1162261467. We can calculate this as:
-
-$3^{log_3 MaxInt} = 3^{19.56} = 3 ^{19} = 1162261467$
-
-Trerefore, the possible values of n where we should return true are $3^0, 3^1 ... 3^{19}$. Since 3 is a **prime** number, the only divisor of $3^{19}$ are  $3^0, 3^1 ... 3^{19}$, therefore all we need to do is divide  $ 3^{19}$ by n. A remainder of 0 means n is a divisor of  $3^{19}$ and therefore a power of three. 
-
-### 二进制中 1 的个数
-
-输入一个整数，输出该数二进制表示中 1 的个数。
-
-该位运算去除 n 的位级表示中最低的那一位。
-
-```
-n       : 10110100
-n-1     : 10110011
-n&(n-1) : 10110000
-```
-
-```java
-public int NumberOf1(int n) {
-    int cnt = 0;
-    while (n != 0) {
-        cnt++;
-        n &= (n - 1);
-    }
-    return cnt;
-}
-```
-
-### 利用位操作来压缩空间
-
+---
