--- a/_posts/math/2024-06-21-素数.md
+++ b/_posts/math/2024-06-21-素数.md
@@ -107,24 +107,22 @@ for i in range(2, math.isqrt(MX) + 1):
      * 如果 $p$ 是 $i$ 的最小质因子（即 $p \mid i$），就**终止当前内层循环**，防止重复标记。
 
 ```python
-def linear_sieve(n):
-    is_prime = [True] * (n + 1)
-    primes = []
+MX = 100_000
+is_prime = [True] * (MX + 1)
+primes = []
 
-    is_prime[0] = is_prime[1] = False  # 0 和 1 不是素数
+is_prime[0] = is_prime[1] = False  # 0 和 1 不是素数
 
-    for i in range(2, n + 1):
-        if is_prime[i]:
-            primes.append(i)  # 找到一个新的素数
+for i in range(2, MX + 1):
+    if is_prime[i]:
+        primes.append(i)  # 找到一个新的素数
 
-        for p in primes:
-            if p * i > n:
-                break
-            is_prime[p * i] = False
-            if i % p == 0:
-                break  # p 是 i 的最小质因子，停止筛这个 i
-
-    return primes
+    for p in primes:
+        if p * i > MX:
+            break
+        is_prime[p * i] = False
+        if i % p == 0:
+            break  # p 是 i 的最小质因子，停止筛这个 i
 ```
 
 ---
@@ -145,7 +143,7 @@ def linear_sieve(n):
 
 ---
 
-## 🚀 质因数分解
+## 🔍 质因数分解
 
 **基本定义：**
 
@@ -173,40 +171,19 @@ def prime_factors(n):
     return factors
 ```
 
-* 时间复杂度：$O(\sqrt{n})$
-* 适合范围：单个 $n \leq 10^9$
-
 ---
 
-### 方法二：线性筛
+### 方法二：埃拉托色尼筛法
 
-如果需要对多个数进行分解，推荐先线性筛出每个数的最小质因子（Min Prime Factor），再快速分解。
+如果需要对多个数进行分解，可以先预处理每个数的质因子列表，思路同埃氏筛。
 
 ```python
-def linear_sieve_with_factors(n):
-    min_prime = [0] * (n + 1)
-    primes = []
-    for i in range(2, n + 1):
-        if min_prime[i] == 0:
-            min_prime[i] = i
-            primes.append(i)
-        for p in primes:
-            if p > min_prime[i] or p * i > n:
-                break
-            min_prime[p * i] = p
-    return min_prime
-
-# 分解单个数
-def factorize(n, min_prime):
-    factors = {}
-    while n > 1:
-        p = min_prime[n]
-        factors[p] = factors.get(p, 0) + 1
-        n //= p
-    return factors
+MX = 1_000_001
+PRIME_FACTORS = [[] for _ in range(MX)]
+for i in range(2, MX):
+    if not PRIME_FACTORS[i]:  # i 是质数
+        for j in range(i, MX, i):  # i 的倍数有质因子 i
+            PRIME_FACTORS[j].append(i)
 ```
-
-* 时间复杂度：预处理 $O(n)$，单次分解 $O(\log n)$
-* 适合范围：处理多个 $n \leq 10^7$ 的质因数分解
 
 ---
