--- a/_posts/2024-02-14-二分查找.md
+++ b/_posts/2024-02-14-二分查找.md
@@ -303,7 +303,7 @@ def right_bound_open(nums, target):
 
 ## 总结
 
-[参考资料](https://leetcode-cn.com/problems/search-insert-position/solution/te-bie-hao-yong-de-er-fen-cha-fa-fa-mo-ban-python-/)
+[参考资料](https://leetcode.cn/problems/search-insert-position/solutions/2023391/er-fen-cha-zhao-zong-shi-xie-bu-dui-yi-g-nq23/)
 
 ### 循环不变量
 
