modify blog name

--- a/_posts/2025-03-21-动态规划入门.md
+++ b/_posts/2025-03-21-动态规划入门.md
@@ -1,5 +1,5 @@
 ---
-title: "动态规划系列：理解DP的基本原理"
+title: "动态规划入门：如何正确理解和使用DP"
 categories: [ds-algo]
 
 math: true
@@ -74,10 +74,11 @@ layout: post
 ### 斐波拉切数列
 
 ```text
-题目描述如下：
-Fibonacci (n) = 0;   n = 0
-Fibonacci (n) = 1;   n = 1, 2
-Fibonacci (n) = Fibonacci(n-1) + Fibonacci(n-2)
+斐波那契数 （通常用 F(n) 表示）形成的序列称为 斐波那契数列 。该数列由 0 和 1 开始，后面的每一项数字都是前面两项数字的和。
+也就是：
+F(0) = 0，F(1) = 1
+F(n) = F(n - 1) + F(n - 2)，其中 n > 1
+给定 n ，请计算 F(n) 。
 ```
 
 **递归解法**：可读性最好，但是很多节点被重复执行，空间开销太大
@@ -244,7 +245,7 @@ public static int cut(int[] p, int n, int[] q) {
     for (int i = 1; i <= n; i++) {
         ret = Math.max(ret, cut(p, n-i, q)+p[i-1]);
     }
-	q[n] = ret;
+	  q[n] = ret;
     return q[n];
 }
 ```
@@ -350,15 +351,10 @@ int getMostGold(int n, int w, int[] g, int[] p){
 - 每个阶段的最优状态是由之前所有阶段的状态的组合得到的->搜索；
 - 每个阶段的最优状态可以从之前某个阶段的某个或某些状态直接得到而不管之前这个状态是如何得到的->动态规划。
 
-**参考链接**：
-* [动态规划算法理论参考](https://blog.csdn.net/Julialove102123/article/details/79490614)
-* [动态规划案例参考](https://blog.csdn.net/u013309870/article/details/75193592)
-* [动态规划：从入门到放弃](https://blog.csdn.net/iva_brother/article/details/84037050)
-* [看动画轻松理解「递归」与「动态规划」](https://segmentfault.com/a/1190000017533031)
-
 ---
 
 ## 经典例题
 - [72. 编辑距离](https://leetcode.cn/problems/edit-distance/)
+- [115. 不同的子序列](https://leetcode.cn/problems/distinct-subsequences/)
 
 ---
