--- a/_posts/2025-04-21-图论2.md
+++ b/_posts/2025-04-21-图论2.md
@@ -1,5 +1,5 @@
 ---
-title: "图论：常用算法介绍"
+title: "图论进阶：掌握图的核心算法"
 categories: [ds-algo]
 
 math: true
@@ -124,6 +124,9 @@ def bfs(graph, start):
                 visited.add(neighbor)
                 queue.append(neighbor)
 ```
+
+**经典例题：**
+- [3629. 通过质数传送到达终点的最少跳跃次数](https://leetcode.cn/problems/minimum-jumps-to-reach-end-via-prime-teleportation/)
 
 ---
 
