--- a/_posts/2025-01-21-回溯.md
+++ b/_posts/2025-01-21-回溯.md
@@ -103,8 +103,7 @@ def backtrack(choiceList, track, answer):
 
 ### 组合问题
 
-##### 组合
-[77. 组合](https://leetcode.cn/problems/combinations/)
+##### [77. 组合](https://leetcode.cn/problems/combinations/)
 
 ```markdown
 给定两个整数 n 和 k，返回 1 ... n 中所有可能的 k 个数的组合。你可以按 任何顺序 返回答案。
@@ -134,8 +133,7 @@ class Solution:
 
 ---
 
-#### 组合总和 III
-[216. 组合总和 III](https://leetcode.cn/problems/combination-sum-iii/)
+#### [216. 组合总和 III](https://leetcode.cn/problems/combination-sum-iii/)
 
 ```markdown
 找出所有相加之和为 n 的 k 个数的组合。组合中只允许含有 1 - 9 的正整数，并且每种组合中不存在重复的数字。
@@ -172,8 +170,8 @@ class Solution:
 
 ---
 
-#### 电话号码的字母组合
-[17.电话号码的字母组合](https://leetcode.cn/problems/letter-combinations-of-a-phone-number/)
+#### [17.电话号码的字母组合](https://leetcode.cn/problems/letter-combinations-of-a-phone-number/)
+
 ```markdown
 给定一个仅包含数字 2-9 的字符串，返回所有它能表示的字母组合。
 给出数字到字母的映射如下（与电话按键相同）。注意 1 不对应任何字母。
@@ -224,8 +222,8 @@ class Solution:
 
 ---
 
-#### 组合总和
-[39. 组合总和](https://leetcode.cn/problems/combination-sum/)
+#### [39. 组合总和](https://leetcode.cn/problems/combination-sum/)
+
 ```markdown
 给定一个无重复元素的数组 candidates 和一个目标数 target ，找出 candidates 中所有可以使数字和为 target 的组合。
 candidates 中的数字可以无限制重复被选取。
@@ -270,8 +268,7 @@ class Solution:
 
 ---
 
-#### 组合总和 II
-【典中典】[216. 组合总和 II](https://leetcode.cn/problems/combination-sum-ii/)
+#### [40. 组合总和 II](https://leetcode.cn/problems/combination-sum-ii/)
 
 ```markdown
 给定一个数组 candidates 和一个目标数 target ，找出 candidates 中所有可以使数字和为 target 的组合。
@@ -381,8 +378,7 @@ class Solution:
 
 ### 切割问题
 
-#### 分割回文串
-[131. 分割回文串](https://leetcode.cn/problems/palindrome-partitioning/)
+#### [131. 分割回文串](https://leetcode.cn/problems/palindrome-partitioning/)
 
 ```markdown
 给定一个字符串 s，将 s 分割成一些子串，使每个子串都是回文串。
@@ -422,8 +418,7 @@ class Solution:
 
 ---
 
-#### 复原IP地址
-[93. 复原IP地址](https://leetcode.cn/problems/restore-ip-addresses/)
+#### [93. 复原IP地址](https://leetcode.cn/problems/restore-ip-addresses/)
 
 ```markdown
 给定一个只包含数字的字符串，复原它并返回所有可能的 IP 地址格式。
@@ -473,8 +468,8 @@ class Solution:
 
 ### 子集问题
 
-#### 子集
-[78. 子集](https://leetcode.cn/problems/subsets/)
+#### [78. 子集](https://leetcode.cn/problems/subsets/)
+
 ```markdown
 给定一组不含重复元素的整数数组 nums，返回该数组所有可能的子集（幂集）。
 
@@ -503,8 +498,8 @@ class Solution:
 
 ---
 
-#### 子集 II
-[90. 子集 II](https://leetcode.cn/problems/subsets-ii/)
+#### [90. 子集 II](https://leetcode.cn/problems/subsets-ii/)
+
 ```markdown
 给定一个可能包含重复元素的整数数组 nums，返回该数组所有可能的子集（幂集）。
 说明：解集不能包含重复的子集。
@@ -539,8 +534,8 @@ class Solution:
 
 ---
 
-#### 递增子序列
-【典中典】[491.递增子序列](https://leetcode.cn/problems/non-decreasing-subsequences/)
+#### [491.递增子序列](https://leetcode.cn/problems/non-decreasing-subsequences/)
+
 ```markdown
 给定一个整型数组, 你的任务是找到所有该数组的递增子序列，递增子序列的长度至少是2。
 
@@ -579,8 +574,8 @@ class Solution:
 
 ### 排列问题
 
-#### 全排列
-[46. 全排列](https://leetcode.cn/problems/permutations/)
+#### [46. 全排列](https://leetcode.cn/problems/permutations/)
+
 ```markdown
 给定一个 没有重复 数字的序列，返回其所有可能的全排列。
 
@@ -617,8 +612,8 @@ class Solution:
 
 ---
 
-#### 全排列 II
-【典中典】[47. 全排列 II](https://leetcode.cn/problems/permutations-ii/)
+#### [47. 全排列 II](https://leetcode.cn/problems/permutations-ii/)
+
 ```markdown
 给定一个可包含重复数字的序列 nums ，按任意顺序 返回所有不重复的全排列。
 
@@ -686,24 +681,21 @@ class Solution:
 
 ### 重复元素问题总结
 
-- 在问题
-[组合总和-II](#组合总和-ii)中，提供三种方法进行去重。每种方法都是对树层进行去重，但实现方式互不相同。
+- 在问题[216-组合总和-II](#216-组合总和-iii)中，提供三种方法进行去重。每种方法都是对树层进行去重，但实现方式互不相同。
   - startIndex关系（推荐）
   - 全局的used数组
   - 每一层的set集合
-- 在问题
-[全排列-II](#全排列-ii)中，提供两种方法进行去重。 
+- 在问题[47-全排列-II](#47-全排列-ii)中，提供两种方法进行去重。 
   - used数组（推荐）。该used数组同时兼判重功能，如果该层调度之前调度过，则跳过该元素；至于树层之间的去重，逻辑与组合问题一致。
   - used数组+每一层的set集合。逻辑较为清晰。used数组仅用于判断之前是否使用过；每一层的set集合用于树层之间的去重。
-- 在问题
-[递增子序列](#递增子序列)中，由于该题不能对集合进行排序，故startIndex关系和全局的used数组都不可用，只能使用每一层的set集合进行树层之间的去重。
+- 在问题[491-递增子序列](#491递增子序列)中，由于该题不能对集合进行排序，故startIndex关系和全局的used数组都不可用，只能使用每一层的set集合进行树层之间的去重。
 
 ---
 
 ### “二维”回溯
 
-#### N皇后
-[51. N皇后](https://leetcode.cn/problems/n-queens/)
+#### [51. N皇后](https://leetcode.cn/problems/n-queens/)
+
 ```markdown
 n 皇后问题 研究的是如何将 n 个皇后放置在 n×n 的棋盘上，并且使皇后彼此之间不能相互攻击。
 给你一个整数 n ，返回所有不同的 n 皇后问题 的解决方案。
@@ -761,8 +753,8 @@ class Solution:
 
 ---
 
-#### 解数独
-[37. 解数独](https://leetcode.cn/problems/sudoku-solver/)
+#### [37. 解数独](https://leetcode.cn/problems/sudoku-solver/)
+
 ```markdown
 编写一个程序，通过填充空格来解决数独问题。
 
@@ -809,6 +801,7 @@ class Solution:
 ---
 
 ### 其他问题
+
 [332. 重新安排行程](https://leetcode.cn/problems/reconstruct-itinerary/)
 ```markdown
 给你一份航线列表 tickets ，其中 `tickets[i] = [from_i, to_i]` 表示飞机出发和降落的机场地点。请你对该行程进行重新规划排序。
