--- a/_posts/2025-03-22-背包问题.md
+++ b/_posts/2025-03-22-背包问题.md
@@ -7,10 +7,9 @@ layout: post
 ---
 
 
-背包问题是经典的动态规划（Dynamic Programming，DP）问题。它的基本形式是给定一组物品，每个物品有重量和价值，同时给定一个背包容量，要求我们在不超过背包容量的情况下，选择哪些物品使得背包内物品的总价值最大。
+背包问题是经典的动态规划问题。它的基本形式是给定一组物品，每个物品有重量和价值，同时给定一个背包容量，要求我们在不超过背包容量的情况下，选择哪些物品使得背包内物品的总价值最大。
 
 常见的背包问题有两种变种：
-
 1. **0-1 背包问题**：每个物品只能选择一次。
 2. **完全背包问题**：每个物品可以选择多次。
 
@@ -28,56 +27,33 @@ layout: post
 | 3    | 7  | 10 |
 
 * 背包容量：`W = 10`
-* 状态定义：`dp[i][w]` 表示前 `i` 个物品，容量为 `w` 时能取得的最大价值。
-* 初始化：`dp[0][...] = 0` 表示不选任何物品时最大价值为 0。
+* DP 表格（行：物品，列：容量）：`dp[i][w]` 表示前 `i` 个物品，容量为 `w` 时能取得的最大价值
+* 初始化：`dp[0][...] = 0` 表示不选任何物品时最大价值为 0
 
 ---
 
-**0-1 背包**, 状态转移方程：
-```python
-if w >= weight[i]:
-    dp[i+1][w] = max(dp[i][w], dp[i][w - weight[i]] + value[i])
-else:
-    dp[i+1][w] = dp[i][w]
-```
-
-DP 表格展示（行：物品，列：容量）。
-`dp[i][w]`，共 5 行（含 base 0 行）× 11 列（容量 0\~10）
+**01背包 DP 表格：**背包最大价值：14
 
 ```
-        w=0  1  2  3   4   5   6   7    8    9   10
+      w=0   1  2  3   4   5   6   7    8    9   10
 --------------------------------------------------
 i=0 |   0   0  0  0   0   0   0   0    0    0    0
 i=1 |   0   0  3  3   3   3   3   3    3    3    3
-i=2 |   0   0  3  4   4   4   7   7    7    7    7
-i=3 |   0   0  3  4   5   5   7   8    9    9    9
-i=4 |   0   0  3  4   5   5   7   10   10  13   14
+i=2 |   0   0  3  4   4   7   7   7    7    7    7
+i=3 |   0   0  3  4   5   7   8   9    9   12   12
+i=4 |   0   0  3  4   5   7   8   10   10  13   14
 ```
 
 说明：
-* 第 i 行表示第 `i-1` 个物品（因为索引是从 0 开始的）
-* 例如第 `4` 行表示已经考虑完前 4 个物品（编号 0\~3）
-* 观察第 `i=4, w=10`：选物品3（重7，值10）+ 物品1（重3，值4） = **14**
-* 即，0-1 背包最大价值：14**
+* 第 i 行表示第 `i-1` 个物品（因为索引是从 0 开始的）。例如第 `4` 行表示已经考虑完前 4 个物品（编号 0\~3）
+* 观察第 `i=4, w=10`：选物品3（重7，值10）+ 物品1（重3，值4） = 14。即，0-1 背包最大价值：14**
 
 ---
 
-**完全背包**, 状态转移方程（和 0-1 背包的唯一区别是从第 `i` 行转移而不是 `i-1`）：
-```python
-if w >= weight[i]:
-    dp[i+1][w] = max(dp[i][w], dp[i+1][w - weight[i]] + value[i])
-else:
-    dp[i+1][w] = dp[i][w]
-```
-
-> 核心差异：**完全背包可以选多次**，所以转移来自 `dp[i+1][...]`（即同一行），而不是上一行！
-
----
-
-完全背包 DP 表格：**完全背包最大价值：15**
+**DP 表格：**背包最大价值：15
 
 ```
-        w=0  1  2  3   4   5   6    7    8    9   10
+      w=0   1  2  3   4   5   6    7    8    9   10
 ---------------------------------------------------
 i=0 |   0   0  0  0   0   0   0    0    0    0    0
 i=1 |   0   0  3  3   6   6   9    9    12   12  15
@@ -86,8 +62,9 @@ i=3 |   0   0  3  4   6   7   9    10   12   13  15
 i=4 |   0   0  3  4   6   7   9    10   12   13  15
 ```
 
-> 到 `i=1` 时已经可以达到最大值 15（例如物品 0 × 5）
-
+说明：
+* 到 `i=1` 时已经可以达到最大值 15（例如物品 0 × 5）
+* **完全背包可以选多次**，所以状态转移可以来自即同一行，而不是仅仅上一行！
 
 ---
 
@@ -97,7 +74,7 @@ i=4 |   0   0  3  4   6   7   9    10   12   13  15
 | ------- | ---------------- | ----------------- |
 | 状态转移来自  | 上一行 `dp[i][...]` | 本行 `dp[i+1][...]` |
 | 每件物品选几次 | 最多 1 次           | 可以多次（不限）          |
-| 最优解     | 14               | **15**            |
+| 最优解     | 14               | 15            |
 
 ---
 
@@ -127,22 +104,38 @@ i=4 |   0   0  3  4   6   7   9    10   12   13  15
 ```python
 # 0-1 背包的二维 DP 代码实现
 def knapsack_01(weights, values, W):
-    n = len(weights)
-    dp = [[0] * (W + 1) for _ in range(n + 1)]  # 初始化 DP 数组
+    n = len(weights)  # 物品个数
     
+    # 创建一个 (n+1) x (W+1) 的 DP 表
+    # dp[i][w] 表示前 i 个物品，在容量为 w 的情况下能达到的最大价值
+    dp = [[0] * (W + 1) for _ in range(n + 1)]
+
+    # 遍历每个物品（注意索引从 1 开始）
     for i in range(1, n + 1):
+        # 遍历每个可能的背包容量（从 0 到 W）
         for w in range(W + 1):
-            if weights[i - 1] <= w:
-                dp[i][w] = max(dp[i - 1][w], dp[i - 1][w - weights[i - 1]] + values[i - 1])
+            if w >= weights[i - 1]:
+                # 当前物品 i-1 可以装进容量为 w 的背包
+                # 两种情况取最大值：
+                # 1. 不选第 i 个物品：dp[i-1][w]
+                # 2. 选第 i 个物品：dp[i-1][w - weights[i-1]] + values[i-1]
+                dp[i][w] = max(
+                    dp[i - 1][w],                             # 不选当前物品
+                    dp[i - 1][w - weights[i - 1]] + values[i - 1]  # 选当前物品
+                )
             else:
+                # 当前物品 i-1 的重量超过背包容量 w，不能选
                 dp[i][w] = dp[i - 1][w]
-    
+
+    # 最终答案是：前 n 个物品放入容量为 W 的背包中能取得的最大价值
     return dp[n][W]
 
-# 示例
-weights = [2, 3, 4, 7]
-values  = [3, 4, 5, 10]
-W = 10
+# 示例输入
+weights = [2, 3, 4, 7]     # 每个物品的重量
+values  = [3, 4, 5, 10]    # 每个物品的价值
+W = 10                     # 背包的最大容量
+
+# 输出：最大价值
 print(knapsack_01(weights, values, W))  # 输出 14
 ```
 
@@ -178,27 +171,44 @@ print(knapsack_01(weights, values, W))  # 输出 14
 ```python
 # 完全背包的二维 DP 代码实现
 def knapsack_unbounded_2d(weights, values, W):
-    n = len(weights)
-    dp = [[0] * (W + 1) for _ in range(n + 1)]  # 初始化 DP 数组
-    
+    n = len(weights)  # 物品数量
+
+    # 初始化二维 dp 表：
+    # dp[i][w] 表示前 i 个物品，在容量为 w 的背包中，能取得的最大价值
+    dp = [[0] * (W + 1) for _ in range(n + 1)]
+
+    # 遍历物品（从 1 开始表示第 i 个物品，weights[i - 1]）
     for i in range(1, n + 1):
+        # 遍历背包容量 w，从 0 到 W
         for w in range(W + 1):
-            dp[i][w] = dp[i - 1][w]
             if w >= weights[i - 1]:
-                dp[i][w] = max(dp[i][w], dp[i][w - weights[i - 1]] + values[i - 1])
-    
+                # 如果当前物品重量不超过背包容量，可以选择选或不选：
+                # ① 不选当前物品：继承上一行的最大价值（即前 i-1 个物品）
+                # ② 选当前物品：当前行的 dp[i][w - weights[i-1]] + 当前物品价值
+                #    注意：选完当前物品后，仍然可以继续选它（所以用的是 dp[i][...], 而不是 dp[i-1][...])
+                dp[i][w] = max(
+                    dp[i - 1][w],                              # 不选当前物品
+                    dp[i][w - weights[i - 1]] + values[i - 1]  # 选当前物品（可重复选）
+                )
+            else:
+                # 当前物品装不进背包，只能继承上一行的值（不选当前物品）
+                dp[i][w] = dp[i - 1][w]
+
+    # 最终答案是：使用前 n 个物品，凑成容量为 W 的最大价值
     return dp[n][W]
 
-# 示例
-weights = [2, 3, 4, 7]
-values  = [3, 4, 5, 10]
-W = 10
+# 示例输入
+weights = [2, 3, 4, 7]     # 每个物品的重量
+values  = [3, 4, 5, 10]    # 每个物品的价值
+W = 10                     # 背包最大容量
+
+# 输出：最大价值
 print(knapsack_unbounded_2d(weights, values, W))  # 输出 15
 ```
 
 ---
 
-## 一维 DP 解决背包问题
+## 一维 DP 优化
 
 
 在 **0-1 背包** 中，我们可以将二维 DP 数组降为一维 DP 数组来减少空间复杂度。**通过从大到小遍历背包容量，可以确保每个物品仅被选择一次。**
@@ -211,19 +221,30 @@ dp[w] = max(dp[w], dp[w - weight[i]] + value[i])
 代码实现：
 ```python
 def knapsack_01(weights, values, W):
-    n = len(weights)
-    dp = [0] * (W + 1)  # 初始化一维 DP 数组
-    
+    n = len(weights)  # 物品数量
+
+    # 初始化一维 DP 数组，dp[w] 表示容量为 w 时的最大价值
+    dp = [0] * (W + 1)
+
+    # 遍历每个物品
     for i in range(n):
-        for w in range(W, weights[i] - 1, -1):  # 从大到小遍历，防止重复使用物品
+        # 倒序遍历容量 w，确保每个物品最多只用一次
+        # 因为我们要保证在使用第 i 个物品时，dp[w - weight[i]] 仍然是“未使用第 i 个物品”时的状态
+        for w in range(W, weights[i] - 1, -1):
+            # 状态转移：
+            # 不选第 i 个物品：dp[w]
+            # 选第 i 个物品：dp[w - weights[i]] + values[i]
             dp[w] = max(dp[w], dp[w - weights[i]] + values[i])
-    
+
+    # 最终结果是：容量为 W 时的最大价值
     return dp[W]
 
-# 示例
-weights = [2, 3, 4, 7]
-values  = [3, 4, 5, 10]
-W = 10
+# 示例输入
+weights = [2, 3, 4, 7]     # 每个物品的重量
+values  = [3, 4, 5, 10]    # 每个物品的价值
+W = 10                     # 背包最大容量
+
+# 输出最大价值
 print(knapsack_01(weights, values, W))  # 输出 14
 ```
 
@@ -237,30 +258,41 @@ dp[w] = max(dp[w], dp[w - weight[i]] + value[i])
 代码实现：
 ```python
 def knapsack_unbounded(weights, values, W):
-    n = len(weights)
-    dp = [0] * (W + 1)  # 初始化一维 DP 数组
-    
+    n = len(weights)  # 物品数量
+
+    # 初始化一维 DP 数组：
+    # dp[w] 表示容量为 w 的背包可以获得的最大价值
+    dp = [0] * (W + 1)
+
+    # 遍历每个物品（每个物品可以无限次使用）
     for i in range(n):
-        for w in range(weights[i], W + 1):  # 从小到大遍历，允许多次选择物品
+        # 正序遍历容量，从小到大，允许“状态被多次使用”，即允许物品多次选入
+        for w in range(weights[i], W + 1):
+            # 状态转移方程：
+            # ① 不选当前物品：dp[w]
+            # ② 选当前物品（一次或多次）：dp[w - weights[i]] + values[i]
             dp[w] = max(dp[w], dp[w - weights[i]] + values[i])
-    
+
+    # 最终返回：容量为 W 时，背包可以取得的最大价值
     return dp[W]
 
-# 示例
-weights = [2, 3, 4, 7]
-values  = [3, 4, 5, 10]
-W = 10
+# 示例输入
+weights = [2, 3, 4, 7]     # 每个物品的重量
+values  = [3, 4, 5, 10]    # 每个物品的价值
+W = 10                     # 背包的最大容量
+
+# 输出最大价值
 print(knapsack_unbounded(weights, values, W))  # 输出 15
 ```
 
 ---
 
-对比结果：
+**遍历顺序：**
 * **0-1 背包**：每个物品只能选择一次，使用动态规划时从大到小更新背包容量。
 * **完全背包**：每个物品可以选择多次，使用动态规划时从小到大更新背包容量。
 
-* **0-1 背包**：通过从大到小更新 DP 数组，避免物品被多次选择。
-* **完全背包**：通过从小到大更新 DP 数组，允许物品被多次选择。
+**0-1 背包为什么不能正序？**
+> 假设你正序遍历 `j`，那么你刚刚更新完 `dp[j]`，在下一个容量 `j+1` 时，如果你用 `dp[j+1 - w[i]]` 转移，其实你可能用到的是刚刚更新过的 `dp[j]`，这就等于你在用同一个物品多次了！
 
 ---
 
@@ -274,19 +306,17 @@ W = 10
 
 n = len(weights)
 
-
 def knapsack_01(i, c):
     # 递归终止条件：没有物品可选或者背包容量为 0
     if i < 0 or c == 0:
         return 0
 
-    # 如果当前物品的重量大于背包剩余容量，不选这个物品
+    # 如果当前物品的重量大于背包剩余容量，无法选择这个物品
     if weights[i] > c:
         return knapsack_01(i-1, c)
 
     # 选择当前物品或者不选择
     return max(knapsack_01(i-1, c), knapsack_01(i-1, c-weights[i]) + values[i])
-
 
 # 示例
 print(knapsack_01(n-1, W))  # 输出 14
@@ -300,19 +330,17 @@ W = 10
 
 n = len(weights)
 
-
 def knapsack_unbounded(i, c):
     # 递归终止条件：没有物品可选或者背包容量为 0
     if i < 0 or c == 0:
         return 0
 
-    # 如果当前物品的重量大于背包剩余容量，不选这个物品
+    # 如果当前物品的重量大于背包剩余容量，无法选择这个物品
     if weights[i] > c:
         return knapsack_unbounded(i - 1, c)
 
     # 选择当前物品或者不选择
     return max(knapsack_unbounded(i - 1, c), knapsack_unbounded(i, c - weights[i]) + values[i])
-
 
 # 示例
 print(knapsack_unbounded(n - 1, W))  # 输出 15
