--- a/_posts/math/2024-06-21-公约数与公倍数.md
+++ b/_posts/math/2024-06-21-公约数与公倍数.md
@@ -6,15 +6,13 @@ math: true
 layout: post
 ---
 
-最大公约数（GCD）和最小公倍数（LCM）
-
-GCD与LCM是整数运算中最基本且常用的数论工具，广泛用于整除判断与数值关系建模。
+最大公约数（GCD）和最小公倍数（LCM）是整数运算中最基本且常用的数论工具，广泛用于整除判断与数值关系建模。
 
 ---
 
 ## GCD与LCM介绍
 
-Greatest Common Divisor，最大公约数。
+Greatest Common Divisor，最大公约数
 
 两个整数 $a$ 和 $b$ 的最大公约数（GCD）是能同时整除这两个数的最大正整数，记作：
 
@@ -34,6 +32,23 @@ $$
 
 ---
 
+LCM 与 GCD 的关系公式
+
+设 $a$ 和 $b$ 是两个正整数，
+它们的最大公约数为 $\gcd(a, b)$，最小公倍数为 $\text{lcm}(a, b)$，则有：
+
+$$
+\text{lcm}(a, b) \times \gcd(a, b) = a \times b
+$$
+
+或者换一种常见形式：
+
+$$
+\text{lcm}(a, b) = \frac{a \times b}{\gcd(a, b)}
+$$
+
+---
+
 ## 辗转相除法
 
 辗转相除法是一种用于计算两个整数最大公约数（GCD）的高效算法，基于一个非常简洁而强大的性质：
@@ -41,7 +56,7 @@ $$
 对于任意两个正整数 $a$ 和 $b$（假设 $a \geq b$），有：
 
 $$
-\gcd(a, b) = \gcd(b, a \mod b)
+\gcd(a, b) = \gcd(b, a \bmod b)
 $$
 
 这个过程会不断地用较小的数去除较大的数，并把余数作为新的除数，直到余数为 0。最后的非零除数就是 GCD。
@@ -80,8 +95,8 @@ def gcd(a, b):
 ```python
 import math
 
-print(math.gcd(10, 2))  # 2
-print(math.lcm(10, 2))  # 10
+print(math.gcd(48, 18))  # 6
+print(math.lcm(48, 18))  # 144
 ```
 
 ---
@@ -119,20 +134,179 @@ $$
 
 ## 辗转相除法证明
 
-**为什么 $\gcd(a, b) = \gcd(b, a \mod b)$ 成立？**
+证明：
+
+$$
+\gcd(a, b) = \gcd(b, a \bmod b)
+$$
+
+我们要证明的核心是：
+
+$$
+\text{设 } r = a \bmod b, \text{则 } \gcd(a, b) = \gcd(b, r)
+$$
+
+---
+
+**几何/集合视角**
+
+我们定义：
+
+* $D(a, b)$：能同时整除 $a$ 和 $b$ 的所有正整数的集合；
+* $D(b, r)$：能同时整除 $b$ 和 $r = a \bmod b $ 的所有正整数的集合。
+
+我们要证明的是：
+
+> $D(a, b) = D(b, r)$，即这两个集合的最大值（最大公约数）是一样的。
+
+---
+
+**形式推理**
+
+假设：
+
+$$
+a = bq + r \quad \text{（整除关系）}
+$$
+
+我们来观察：什么数能同时整除 $a$ 和 $b$？
+
+---
+
+第一步：若 $d \mid a$ 且 $d \mid b$，则 $d \mid r$
+
+因为：
+
+$$
+r = a - bq
+$$
+
+而 $d \mid a$，$d \mid b$，说明 $d$ 也能整除 $r = a - bq$。
+
+所以：
+
+$$
+\begin{align}
+\text{若 } d \mid a \text{ 且 } d \mid b &\Rightarrow d \mid r \\
+&\Rightarrow d \mid b \text{ 且 } d \mid r \\
+&\Rightarrow d \in D(b, r)
+\end{align}
+$$
+
+也就是说：**$D(a, b) \subseteq D(b, r)$**
+
+---
+
+第二步：反过来，若 $d \mid b$ 且 $d \mid r$，那 $d \mid a$
+
+因为：
+
+$$
+\begin{aligned}
+a &= bq + r \\
+&\Rightarrow d \mid b \text{ 且 } d \mid r \Rightarrow d \mid a \\
+&\Rightarrow d \in D(a, b)
+\end{aligned}
+$$
+
+所以：**$D(b, r) \subseteq D(a, b)$**
+
+---
+
+**结论：**
+
+$$
+\begin{aligned}
+D(a, b) &= D(b, r) \\
+&\Rightarrow \gcd(a, b) = \gcd(b, r) \\
+&\Rightarrow \text{辗转相除法成立}
+\end{aligned}
+$$
+
+---
+
+## LCM关系公式证明
+
+证明：
+
+$$
+\text{lcm}(a, b) = \frac{a \cdot b}{\gcd(a, b)}
+$$
+
+---
+
+**基本定义**
+
+* **最大公约数** $\gcd(a, b)$：能同时整除 $a$、$b$ 的**最大**正整数。
+* **最小公倍数** $\text{lcm}(a, b)$：能被 $a$、$b$ 同时整除的**最小**正整数。
+
+---
+
+**推导思路**
+
+我们从一个最基本的数论分解出发：
+
+> 任意两个整数 $a$、$b$，我们可以把它们写成「最大公约数 × 互质部分」的形式：
+
+$$
+a = d \cdot m,\quad b = d \cdot n,\quad \text{其中 } d = \gcd(a, b)
+$$
+
+因为我们已经提取了所有公共因子，所以 $m$ 和 $n$ 一定**互质**（$\gcd(m, n) = 1$）。
+
+---
+
+**详细推导步骤**
+
+第一步：用最大公约数表示 $a$ 和 $b$
 
 设：
 
 $$
-a = bq + r \quad \text{（q 为商，r 为余数）}
+a = d \cdot m,\quad b = d \cdot n,\quad \text{其中 } d = \gcd(a, b)
 $$
 
-任何能整除 $a$ 和 $b$ 的数 $d$，必然也能整除 $r = a - bq$
-反过来，能整除 $b$ 和 $r$ 的数，也能整除 $a = bq + r$
-因此：
+此时 $m$、$n$ 互质。
+
+---
+
+第二步：写出 $a \cdot b$
 
 $$
-\gcd(a, b) = \gcd(b, r)
+a \cdot b = (d \cdot m)(d \cdot n) = d^2 \cdot m \cdot n
+$$
+
+---
+
+第三步：考虑最小公倍数的构造方式
+
+最小公倍数 $L$ 是同时能被 $a$、$b$ 整除的最小正整数。
+
+显然：
+
+$$
+L = d \cdot m \cdot n
+$$
+
+为什么？因为：
+
+* $a = d \cdot m$，所以 $L = d \cdot m \cdot n$ 是 $a$ 的倍数；
+* $b = d \cdot n$，同理 $L$ 也是 $b$ 的倍数；
+* 且 $m$、$n$ 互质，所以这是最小的共同倍数。
+
+---
+
+第四步：整理为公式
+
+我们已经有：
+
+* $a \cdot b = d^2 \cdot m \cdot n$
+* $\text{lcm}(a, b) = d \cdot m \cdot n$
+
+所以：
+
+$$
+\text{lcm}(a, b) = \frac{a \cdot b}{\gcd(a, b)}
 $$
 
 ---
