--- a/_posts/2024-02-21-双指针_滑动窗口.md
+++ b/_posts/2024-02-21-双指针_滑动窗口.md
@@ -32,6 +32,7 @@ layout: post
 
 **经典例题：**
 - [3439. 重新安排会议得到最多空余时间 I](https://leetcode.cn/problems/reschedule-meetings-for-maximum-free-time-i/)
+- [3634. 使数组平衡的最少移除数目](https://leetcode.cn/problems/minimum-removals-to-balance-array/)
 
 ---
 
