--- a/_posts/math/2024-06-21-公约数与公倍数.md
+++ b/_posts/math/2024-06-21-公约数与公倍数.md
@@ -148,79 +148,57 @@ $$
 
 ---
 
-**几何/集合视角**
+设：
 
-我们定义：
-
-* $D(a, b)$：能同时整除 $a$ 和 $b$ 的所有正整数的集合；
-* $D(b, r)$：能同时整除 $b$ 和 $r = a \bmod b $ 的所有正整数的集合。
-
-我们要证明的是：
-
-> $D(a, b) = D(b, r)$，即这两个集合的最大值（最大公约数）是一样的。
+* $d = \gcd(a, b)$
+* $d' = \gcd(b, r)$
 
 ---
 
-**形式推理**
-
-假设：
+根据：
 
 $$
-a = bq + r \quad \text{（整除关系）}
+a = bq + r \Rightarrow r = a - bq
 $$
 
-我们来观察：什么数能同时整除 $a$ 和 $b$？
+因为 $d \mid a$ 且 $d \mid b$，所以：
+
+$$
+d \mid r
+$$
+
+> 因为 $d \mid a$，所以存在整数 $m$，使：
+> $a = dm$
+> 
+> 因为 $d \mid b$，所以存在整数 $n$，使：
+> $b = dn$
+> 
+> 将 $a = bq + r$ 代入：
+> $r = a - bq = dm - d(nq) = d(m - nq)$
+> 
+> 所以：
+> $d \mid r$
+
+再根据 $d$ 是 $b$ 和 $r$ 的公约数，即$d \le \gcd(b, r)$，可以得到，$d <= d'$ 。
 
 ---
 
-第一步：若 $d \mid a$ 且 $d \mid b$，则 $d \mid r$
+同理， $d' \mid b$ 且 $d' \mid r$ ，可以得到 $d' \mid a$ 。
 
-因为：
-
-$$
-r = a - bq
-$$
-
-而 $d \mid a$，$d \mid b$，说明 $d$ 也能整除 $r = a - bq$。
-
-所以：
-
-$$
-\begin{align}
-\text{若 } d \mid a \text{ 且 } d \mid b &\Rightarrow d \mid r \\
-&\Rightarrow d \mid b \text{ 且 } d \mid r \\
-&\Rightarrow d \in D(b, r)
-\end{align}
-$$
-
-也就是说：**$D(a, b) \subseteq D(b, r)$**
+再根据 $d'$ 是 $a$ 和 $b$ 的公约数，即 $d' \le \gcd(a, b)$, 可以得到，$d' <= d$ 。
 
 ---
 
-第二步：反过来，若 $d \mid b$ 且 $d \mid r$，那 $d \mid a$
-
-因为：
+结合两边，我们得到：
 
 $$
-\begin{aligned}
-a &= bq + r \\
-&\Rightarrow d \mid b \text{ 且 } d \mid r \Rightarrow d \mid a \\
-&\Rightarrow d \in D(a, b)
-\end{aligned}
+d \le d' \quad \text{且} \quad d' \le d \Rightarrow d = d'
 $$
 
-所以：**$D(b, r) \subseteq D(a, b)$**
-
----
-
-**结论：**
+因此，可以证明：
 
 $$
-\begin{aligned}
-D(a, b) &= D(b, r) \\
-&\Rightarrow \gcd(a, b) = \gcd(b, r) \\
-&\Rightarrow \text{辗转相除法成立}
-\end{aligned}
+\gcd(a, b) = \gcd(b, r)
 $$
 
 ---
@@ -303,7 +281,7 @@ $$
 * $a \cdot b = d^2 \cdot m \cdot n$
 * $\text{lcm}(a, b) = d \cdot m \cdot n$
 
-所以：
+因此，可以证明：
 
 $$
 \text{lcm}(a, b) = \frac{a \cdot b}{\gcd(a, b)}
