--- a/_posts/programming/2025-06-01-Pythonic编程.md
+++ b/_posts/programming/2025-06-01-Pythonic编程.md
@@ -130,6 +130,38 @@ s.zfill(5)  # 输出: "00042"
 
 ---
 
+## 集合操作
+
+### defaultdict用法
+
+在 Python 的 `collections` 模块中，`defaultdict` 允许你为字典的默认值指定一个工厂函数。当你访问一个不存在的键时，它会自动创建一个默认值。
+
+如果你想指定默认值为 `int`，这相当于：
+
+```python
+from collections import defaultdict
+
+d = defaultdict(int)
+```
+此时，每当你访问一个不存在的键时，它会自动赋值为 `0`（因为 `int()` 返回 0）。
+
+你还可以替换成其他类型的工厂函数，比如：
+* `defaultdict(list)` → 默认值为 `[]`
+* `defaultdict(set)` → 默认值为 `set()`
+
+**指定默认值的方式：**重新定义工厂函数。
+```python
+from collections import defaultdict
+
+d1 = defaultdict(lambda: float('inf'))
+
+d2 = defaultdict(lambda: [0])
+```
+
+---
+
+## 循环语句
+
 ### enumerate用法
 
 `enumerate()` 是 Python 内置的一个非常常用的函数，它可以在遍历可迭代对象（如列表、元组等）时，**同时获取元素的索引和元素本身**。
@@ -175,30 +207,42 @@ for index, value in enumerate(lst, start=1):
 
 ---
 
-### defaultdict用法
-
-在 Python 的 `collections` 模块中，`defaultdict` 允许你为字典的默认值指定一个工厂函数。当你访问一个不存在的键时，它会自动创建一个默认值。
-
-如果你想指定默认值为 `int`，这相当于：
+### for else语法
 
 ```python
-from collections import defaultdict
-
-d = defaultdict(int)
+for item in iterable:
+    if condition(item):
+        break
+else:
+    # 只有当 for 循环没有被 break 打断时，这里的 else 才会执行
+    do_something()
 ```
-此时，每当你访问一个不存在的键时，它会自动赋值为 `0`（因为 `int()` 返回 0）。
 
-你还可以替换成其他类型的工厂函数，比如：
-* `defaultdict(list)` → 默认值为 `[]`
-* `defaultdict(set)` → 默认值为 `set()`
+---
 
-**指定默认值的方式：**重新定义工厂函数。
+**理解方式**
+
+* `for` 循环正常结束（没有 `break`），则执行 `else`。
+* 如果 `for` 循环因为 `break` 提前终止，则 `else` 不执行。
+
+---
+
+举个例子：查找质数
+
 ```python
-from collections import defaultdict
+n = 29
 
-d1 = defaultdict(lambda: float('inf'))
-
-d2 = defaultdict(lambda: [0])
+for i in range(2, int(n ** 0.5) + 1):
+    if n % i == 0:
+        print(f"{n} 不是质数")
+        break
+else:
+    print(f"{n} 是质数")
 ```
+
+解释：
+
+* 如果 `n` 能被某个 `i` 整除，说明不是质数，直接 `break`。
+* 如果 `for` 循环跑完没 `break`，说明找不到因子，是质数，于是执行 `else`。
 
 ---
